# csgo-inv-shuffle

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  renovate.json  requirements.txt  setup.py
.github/workflows/: codeql-analysis.yml  flake8.yml  main.yml  pytest.yml  python-package.yml  python-publish.yml
csgoinvshuffle/: __init__.py  exceptions.py  inventory.py  item.py  shuffle.py  shuffleformat.py  types.py  utils.py
csgoinvshuffle/enums/: __init__.py  filters_enums.py  item_types.py  loadout_slots.py  rarities.py  teams.py
docs/: .buildinfo  conf.py  genindex.html  index.html  index.rst  objects.inv  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
tests/: conftest.py  test_inventory.py  test_item.py  test_shuffle.py  test_utils.py  utils.py
tests/test_data/: compare_data.txt  inventory_repr.txt  test_inventory.json
