[tool.poetry]
name = "csgoinvshuffle"
version = "1.2.4"
description = "A module for creating CS:GO inventory shuffle config files"
authors = ["Jan Vollmer <zunder325@gmail.com>"]
license = "MIT License"
readme="README.md"
repository="https://github.com/kreyoo/csgo-inv-shuffle"
classifiers=[
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Typing :: Typed",
        "Natural Language :: English",
        "Intended Audience :: End Users/Desktop",
        "Development Status :: 5 - Production/Stable",
        "Topic :: Games/Entertainment :: First Person Shooters",
        "Topic :: Software Development :: Libraries :: Python Modules"
    ]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
Deprecated = "^1.2.13"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
