[tool.poetry]
name = "csgoinvshuffle"
version = "1.3.10"
description = "A package for creating CS:GO inventory shuffle config files"
authors = ["Jan Vollmer <jan@vllmr.dev>"]
license = "MIT License"
readme="README.md"
homepage="https://csgoinvshuffle.kreyoo.dev"
repository="https://github.com/jvllmr/csgo-inv-shuffle"
classifiers=[
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Typing :: Typed",
        "Natural Language :: English",
        "Intended Audience :: End Users/Desktop",
        "Development Status :: 5 - Production/Stable",
        "Topic :: Games/Entertainment :: First Person Shooters",
        "Topic :: Software Development :: Libraries :: Python Modules"
    ]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
Deprecated = "^1.2.13"
typing-extensions = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
flake8 = "^4.0.1 || ^5.0.0"
black = "^22.10"
mypy = ">=0.910"
pre-commit = "^2.20.0"
pytest-cov = "^3.0.0 || ^4.0.0"
tox = "^3.26.0"
tox-poetry = "^0.4.1"
types-Deprecated = "^1.2.9"
types-requests = "^2.28.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.7"
files = ["csgoinvshuffle"]

[tool.flake8]
max-line-length = 90
exclude = ["test.py","setup.py",".venv"]

[tool.isort]
profile = "black"

[tool.pyaphid]
forbidden = [
    "print"
    ]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist= py37,py38, py39, py310

[testenv]
commands =
    pytest

"""
